--- a/app/src/main/res/layout/fragment_file.xml
+++ b/app/src/main/res/layout/fragment_file.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/MainBackgroundColor"
     tools:context="com.dlamloi.MAD.home.files.FileFragment">
 
     <android.support.v7.widget.RecyclerView
