--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -1,46 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
-    android:background="@color/white"
+    app:cardElevation="8dp"
     android:padding="5dp">
 
-    <ImageView
-        android:id="@+id/status_imageview"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/complete_icon"
-
-        />
-
-    <TextView
-        android:id="@+id/task_assigned_member_textview"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/status_imageview"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:text="Simon Lee"
-        android:textAlignment="center"
-        android:textColor="@color/md_black_1000"
-        android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/task_title_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/task_assigned_member_textview"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
-        android:maxWidth="120dp"
-        android:text="Create use case diagram"
-        android:textAlignment="center"
-        android:textColor="@color/md_black_1000"
+        android:background="@color/white"
+        android:padding="5dp">
 
 
-        />
+        <ImageView
+            android:id="@+id/status_imageview"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/complete_icon"
+
+            />
+
+        <TextView
+            android:id="@+id/task_title_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/status_imageview"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:maxWidth="120dp"
+            android:text="Create use case diagram"
+            android:textAlignment="center"
+            android:textColor="@color/md_black_1000"
 
 
-</RelativeLayout>
+            />
+
+        <TextView
+            android:id="@+id/task_assigned_member_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/task_title_textview"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:text="brianlamlui@gmail.com"
+            android:textAlignment="center"
+            android:textColor="@color/md_black_1000"
+            android:textSize="20dp" />
+
+
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
+
+
