--- a/app/src/main/res/layout/content_create_group.xml
+++ b/app/src/main/res/layout/content_create_group.xml
@@ -4,111 +4,76 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:padding="20dp"
-    android:background="@drawable/orange_gradient_background"
     tools:context="com.dlamloi.MAD.groupcreation.CreateGroupActivity"
     tools:showIn="@layout/activity_create_group">
 
+
     <ImageView
-        android:id="@+id/select_image_button"
+        android:id="@+id/group_imageview"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:gravity="center"
-        android:src="@drawable/group_profile"
-        />
+        android:layout_marginTop="10dp"
+        android:src="@drawable/group_profile" />
 
 
-
-    <LinearLayout
-        android:id="@+id/group_name_layout"
-        android:layout_below="@+id/select_image_button"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/group_name_textinputlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/group_imageview"
+        android:layout_marginTop="10dp"
+        android:hint="@string/group_name"
         android:orientation="vertical"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            >
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#cdb99c"
-                />
-
-
-            <TextView
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/roboto"
-                android:text="Group Name"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="15sp" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:layout_weight="1"
-                android:background="#cdb99c"
-                />
-
-
-        </LinearLayout>
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:textColorHint="@color/edittext_hint_color"
+        android:theme="@style/CustomEditTextTheme">
 
         <EditText
             android:id="@+id/group_name_edittext"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/black"
+
             />
 
-    </LinearLayout>
+
+    </android.support.design.widget.TextInputLayout>
+
 
     <LinearLayout
-        android:layout_below="@+id/group_name_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/group_name_textinputlayout"
         android:layout_marginTop="10dp"
         android:orientation="vertical"
-        >
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
-            >
+            android:orientation="horizontal">
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
-                android:background="#cdb99c"
-                />
+                android:background="@color/black" />
 
 
             <TextView
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:fontFamily="@font/roboto"
-                android:text="Members"
+                android:text="@string/members"
                 android:textAlignment="center"
                 android:textColor="#000000"
                 android:textSize="15sp" />
@@ -117,8 +82,7 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_weight="1"
-                android:background="#cdb99c"
-                />
+                android:background="@color/black" />
 
 
         </LinearLayout>
@@ -126,48 +90,101 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/member_one_edittext"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/member_one_textinputlayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Member #1 Email"
+                android:textColorHint="@color/edittext_hint_color"
+                android:theme="@style/CustomEditTextTheme">
 
-                />
+                <EditText
+                    android:id="@+id/member_one_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black"
+                    android:hint="@string/member_1_email"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black" />
 
-            <EditText
-                android:id="@+id/member_two_edittext"
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Member #2 Email"
+                android:textColorHint="@color/edittext_hint_color"
+                android:theme="@style/CustomEditTextTheme">
 
-                />
+                <EditText
+                    android:id="@+id/member_two_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black"
+                    android:hint="@string/member_2_email"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
 
-            <EditText
-                android:id="@+id/member_three_edittext"
+                    />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Member #3 Email"
+                android:textColorHint="@color/edittext_hint_color"
+                android:theme="@style/CustomEditTextTheme">
 
-                />
+                <EditText
+                    android:id="@+id/member_three_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black"
+                    android:hint="@string/member_3_email"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
 
-            <EditText
-                android:id="@+id/member_four_edittext"
+                    />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Member #4 Email"
+                android:textColorHint="@color/edittext_hint_color"
+                android:theme="@style/CustomEditTextTheme">
 
-                />
+                <EditText
+                    android:id="@+id/member_four_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black"
+                    android:hint="@string/member_4_email"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
 
-            <EditText
-                android:id="@+id/member_five_edittext"
+                    />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Member #5 Email"
+                android:textColorHint="@color/edittext_hint_color"
+                android:theme="@style/CustomEditTextTheme">
 
-                />
+                <EditText
+                    android:id="@+id/member_five_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/black"
+                    android:hint="@string/member_5_email"
+                    android:textColor="@color/black"
+                    android:textColorHint="@color/black"
+
+                    />
+
+            </android.support.design.widget.TextInputLayout>
 
 
         </LinearLayout>
