--- a/app/src/main/res/layout/meeting_row.xml
+++ b/app/src/main/res/layout/meeting_row.xml
@@ -104,5 +104,12 @@
         android:layout_marginStart="6dp"
         />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignBottom="@id/color_margin"
+        android:background="@color/md_grey_300"
+        />
+
 
 </RelativeLayout>
