--- a/app/src/main/res/layout/app_bar_view_groups.xml
+++ b/app/src/main/res/layout/app_bar_view_groups.xml
@@ -28,6 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/create_icon" />
+        app:srcCompat="@drawable/create_icon"
+        android:visibility="invisible"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
