--- a/app/src/main/res/layout/content_post_update.xml
+++ b/app/src/main/res/layout/content_post_update.xml
@@ -14,10 +14,11 @@
 
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/update_title_textinputlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColorHint="@color/Post_Update_Hint_Color"
-        android:backgroundTint="#000000"
+        android:theme="@style/CustomEditTextTheme"
         >
 
         <EditText
@@ -26,12 +27,12 @@
             android:layout_height="wrap_content"
             android:hint="@string/enter_update_title"
             android:textColor="@android:color/black"
-            android:backgroundTint="@color/colorAccent"
+            android:backgroundTint="@color/black"
             />
 
     </android.support.design.widget.TextInputLayout>
 
-    <EditText
+    <android.support.design.widget.TextInputEditText
         android:id="@+id/update_information_edittext"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
