--- a/app/src/main/res/menu/create_meeting_menu.xml
+++ b/app/src/main/res/menu/create_meeting_menu.xml
@@ -6,6 +6,7 @@
         android:id="@+id/create_meeting_menu_button"
         android:title="Create"
         app:showAsAction="always"
+        android:enabled="false"
         />
 
 </menu>
