--- a/app/src/main/res/layout/content_create_task.xml
+++ b/app/src/main/res/layout/content_create_task.xml
@@ -63,6 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
+                    android:inputType="text"
                     android:textColor="@color/md_black_1000" />
 
             </android.support.design.widget.TextInputLayout>
