--- a/app/src/main/res/layout/content_post_update.xml
+++ b/app/src/main/res/layout/content_post_update.xml
@@ -28,6 +28,8 @@
             android:hint="@string/enter_update_title"
             android:textColor="@android:color/black"
             android:backgroundTint="@color/black"
+            android:inputType="text"
+            android:lines="1"
             />
 
     </android.support.design.widget.TextInputLayout>
