--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
-    app:cardElevation="8dp"
-    android:padding="5dp">
+    android:padding="5dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardElevation="8dp">
 
     <RelativeLayout
+        android:id="@+id/task_row_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -34,10 +34,7 @@
             android:maxWidth="120dp"
             android:text="Create use case diagram"
             android:textAlignment="center"
-            android:textColor="@color/md_black_1000"
-
-
-            />
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/task_assigned_member_textview"
@@ -48,9 +45,20 @@
             android:layout_marginTop="5dp"
             android:text="brianlamlui@gmail.com"
             android:textAlignment="center"
-            android:textColor="@color/md_black_1000"
+            android:textColor="@color/black"
             android:textSize="20dp" />
 
+
+        <TextView
+            android:id="@+id/task_due_date_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/task_assigned_member_textview"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:text="Due: 03 Apr. 2018"
+            android:textAlignment="center"
+            android:textColor="@color/md_grey_600" />
 
 
     </RelativeLayout>
