--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -50,7 +50,7 @@
     <color name="material_drawer_dark_header_selection_text">#FFF</color>
     <color name="black">#000000</color>
     <color name="edittext_hint_color">@color/md_grey_500</color>
-    
+    <color name="download_green">#00ff0c</color>
 
 
 
